--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/file-chooser": "^5.36.0",
     "@ionic/angular": "^8.0.0",
+    "cordova-plugin-filechooser": "^1.2.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
